2014-08-20 Added API method getView to Table module
2014-08-19 Fixed drawing stand area nad hide area, some styling changes, new icons in Interactive Table
2014-08-18 Fixed drawing on mobile devices in Interactive Table module
2014-08-11 Added isAllOK() command to Magic Boxes module
2014-08-07 Fixed selecting issue in Line Number addon on Android 4.2.2 devices
2014-08-07 Added new module Interactive Table
2014-08-07 Fixed problem when video ended in full screen mode on Android native browser
2014-08-07 Fixed problem with page scroll when glossary popup appears in nested iframes
2014-08-07 Fixed problem with Popup module when appears in nested iframes
2014-08-06 Added responding to Show Answers events in Text Selection module
2014-08-06 Added new module: Animated Page Progress
2014-08-01 Added new property, "Random order", to Source List module
2014-08-01 Fixed LearnPen module name
2014-08-01 Added responding to Show Answers events in Choice module
2014-08-01 Added separate CSS classes for elements in show answers mode in True/False module
2014-08-01 Fixed problem with checking case sensitive answers in Table module gaps
2014-08-01 Extended TextParser service gaps API with additional options property
2014-07-31 Added isAllOK() command and AllOK event to Crossword module.
2014-07-30 Fixed text wrapping and removed problem with double scroll bars in Paragraph module
2014-07-30 Added possibility of custom styling each cell (via CSS styles and classes) in Writing Calculations module
2014-07-29 Fixed responding to Check Answers button in True/False module while it's set as not-activity
2014-07-29 Added isAllOK() command and AllOK event to Memo Game module.
2014-07-29 Added responding to Show Answers events in True/False module
2014-07-29 Added new module: Show Answers
2014-07-25 Added new module: Page Rating
2014-07-24 Added new module: Sudoku
2014-07-24 Added new command to Player Services - sendPageAllOkOnValueChanged()