@@ -1,3 +1,4 @@
+2014-08-20 Added Random order property to Choice module
 2014-08-20 Added API method getView to Table module
 2014-08-19 Fixed drawing stand area nad hide area, some styling changes, new icons in Interactive Table
 2014-08-18 Fixed drawing on mobile devices in Interactive Table module
